--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -192,5 +192,14 @@
       "9": "Ukraine and the US disagree on at least 3 points of the peace plan – CNN…",
       "10": "Ukraine and the US disagree on at least 3 points of the peace plan – CNN…"
     }
+  },
+  "newsDetail": {
+    "similarNews": "Similar News",
+    "viewSection": "Go to section",
+    "title": "Shavkat Mirziyoyev got acquainted with the activities of the only enterprise producing biaxially oriented polypropylene film",
+    "paragraph1": "The President got acquainted with the activities of the only enterprise in the country, Invest Asia, located in the Syrdarya free economic zone, which produces packaging products and biaxially oriented polypropylene film. This enterprise is one of the leading complexes for the production of packaging products in Central Asia.",
+    "quote1_1": "Packaging products are necessary raw materials for many industries such as food, pharmaceuticals, industry, construction, household chemicals. Their quality directly affects the safe storage, transportation and timely delivery of products to the market.",
+    "quote1_2": "In this regard, the operation of such large capacities as Invest Asia in the country contributes to reducing import costs, ensuring the stability of the domestic market and reducing the costs of manufacturers.",
+    "paragraph2": "Another important aspect of the Invest Asia enterprise is that it is the only enterprise in Uzbekistan producing biaxially oriented polypropylene film. This type of film is one of the most sought-after materials in the packaging industry and is distinguished by its strength and lightness."
   }
 }
