--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -192,5 +192,14 @@
       "9": "Украина и США расходятся как минимум по 3 пунктам мирного плана – CNN…",
       "10": "Украина и США расходятся как минимум по 3 пунктам мирного плана – CNN…"
     }
+  },
+  "newsDetail": {
+    "similarNews": "Похожие новости",
+    "viewSection": "Перейти в раздел",
+    "title": "Шавкат Мирзиёев ознакомился с деятельностью единственного предприятия по производству биаксально ориентированной полипропиленовой пленки",
+    "paragraph1": "Президент ознакомился с деятельностью единственного в стране предприятия Invest Asia, расположенного в свободной экономической зоне «Сырдарья», которое производит упаковочную продукцию и биаксально ориентированную полипропиленовую пленку. Это предприятие является одним из ведущих комплексов по производству упаковочной продукции в Центральной Азии.",
+    "quote1_1": "Упаковочная продукция является необходимым сырьем для многих отраслей, таких как пищевая промышленность, фармацевтика, промышленность, строительство, бытовая химия. Их качество напрямую влияет на безопасное хранение, транспортировку и своевременную доставку продукции на рынок.",
+    "quote1_2": "В этой связи деятельность таких крупных мощностей, как Invest Asia в стране, способствует снижению импортных расходов, обеспечению стабильности внутреннего рынка и снижению затрат производителей.",
+    "paragraph2": "Еще одним важным аспектом предприятия Invest Asia является то, что это единственное предприятие в Узбекистане, производящее биаксально ориентированную полипропиленовую пленку. Этот тип пленки является одним из наиболее востребованных материалов в упаковочной отрасли и отличается прочностью и легкостью."
   }
 }
