--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -21,7 +21,13 @@
     "category": "УЗБЕКИСТАН",
     "title": "Экологический указ: строгий контроль за строительством и предприятиями, искусственные озера, ограничения движения транспорта",
     "latestNews": "Последние новости",
-    "viewMore": "Перейти в раздел"
+    "viewMore": "Перейти в раздел",
+    "latestNewsList": {
+      "1": "Украина и США расходятся как минимум по 3 пунктам мирного плана – CNN...",
+      "2": "Украина и США расходятся как минимум по 3 пунктам мирного плана – CNN...",
+      "3": "Украина и США расходятся как минимум по 3 пунктам мирного плана – CNN...",
+      "4": "Украина и США расходятся как минимум по 3 пунктам мирного плана – CNN..."
+    }
   },
   "trending": {
     "title": "Актуальные новости",
