feat: add admin pages for managing locations, posts, and login functionality
- Created LocationsPage component for managing locations with CRUD operations.
- Implemented LoginPage component for admin authentication.
- Developed PostsPage component for managing posts with CRUD operations.
- Added API service for handling requests related to posts, categories, and locations.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -207,5 +207,115 @@
     "quote1_1": "Packaging products are necessary raw materials for many industries such as food, pharmaceuticals, industry, construction, household chemicals. Their quality directly affects the safe storage, transportation and timely delivery of products to the market.",
     "quote1_2": "In this regard, the operation of such large capacities as Invest Asia in the country contributes to reducing import costs, ensuring the stability of the domestic market and reducing the costs of manufacturers.",
     "paragraph2": "Another important aspect of the Invest Asia enterprise is that it is the only enterprise in Uzbekistan producing biaxially oriented polypropylene film. This type of film is one of the most sought-after materials in the packaging industry and is distinguished by its strength and lightness."
+  },
+  "admin": {
+    "panel": "Admin Panel",
+    "viewSite": "View Site",
+    "logout": "Logout",
+    "login": {
+      "title": "Admin Panel Login",
+      "subtitle": "Welcome to KUN.UZ management system",
+      "username": "Username",
+      "usernamePlaceholder": "Enter username",
+      "password": "Password",
+      "passwordPlaceholder": "Enter password",
+      "submit": "Login",
+      "error": "Invalid username or password",
+      "backToHome": "Back to homepage"
+    },
+    "menu": {
+      "dashboard": "Dashboard",
+      "categories": "Categories",
+      "posts": "Posts",
+      "locations": "Locations"
+    },
+    "dashboard": {
+      "welcome": "Welcome, Admin!",
+      "subtitle": "System metrics and overview",
+      "totalPosts": "Total Posts",
+      "totalCategories": "Total Categories",
+      "totalViews": "Total Views",
+      "totalLocations": "Total Locations",
+      "recentPosts": "Recent Posts",
+      "quickActions": "Quick Actions",
+      "createPost": "Create New Post",
+      "createPostDesc": "Add new article",
+      "manageCategories": "Manage Categories",
+      "manageCategoriesDesc": "Edit categories",
+      "manageLocations": "Manage Locations",
+      "manageLocationsDesc": "Edit locations"
+    },
+    "categories": {
+      "title": "Categories",
+      "subtitle": "Manage and edit all categories",
+      "addNew": "New Category",
+      "totalCategories": "Total Categories",
+      "activeCategories": "Active Categories",
+      "totalPosts": "Total Posts",
+      "categoryName": "Category Name",
+      "slug": "Slug",
+      "posts": "Posts",
+      "status": "Status",
+      "actions": "Actions",
+      "active": "Active",
+      "inactive": "Inactive",
+      "edit": "Edit",
+      "delete": "Delete",
+      "addCategory": "Add New Category",
+      "editCategory": "Edit Category",
+      "cancel": "Cancel",
+      "create": "Create",
+      "update": "Update",
+      "deleteConfirm": "Are you sure you want to delete this category?"
+    },
+    "posts": {
+      "title": "Posts",
+      "subtitle": "Manage and edit all posts",
+      "addNew": "New Post",
+      "totalPosts": "Total Posts",
+      "published": "Published",
+      "drafts": "Drafts",
+      "draft": "Draft",
+      "totalViews": "Total Views",
+      "postTitle": "Post Title",
+      "category": "Category",
+      "author": "Author",
+      "date": "Date",
+      "views": "Views",
+      "status": "Status",
+      "actions": "Actions",
+      "edit": "Edit",
+      "delete": "Delete",
+      "addPost": "Add New Post",
+      "editPost": "Edit Post",
+      "content": "Content",
+      "cancel": "Cancel",
+      "create": "Create",
+      "update": "Update",
+      "deleteConfirm": "Are you sure you want to delete this post?"
+    },
+    "locations": {
+      "title": "Locations",
+      "subtitle": "Manage and edit all locations",
+      "addNew": "New Location",
+      "totalLocations": "Total Locations",
+      "activeLocations": "Active Locations",
+      "totalPosts": "Total Posts",
+      "locationName": "Location Name",
+      "region": "Region",
+      "posts": "Posts",
+      "status": "Status",
+      "actions": "Actions",
+      "active": "Active",
+      "inactive": "Inactive",
+      "edit": "Edit",
+      "delete": "Delete",
+      "addLocation": "Add New Location",
+      "editLocation": "Edit Location",
+      "cancel": "Cancel",
+      "create": "Create",
+      "update": "Update",
+      "deleteConfirm": "Are you sure you want to delete this location?"
+    }
   }
 }
