--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -207,5 +207,115 @@
     "quote1_1": "Упаковочная продукция является необходимым сырьем для многих отраслей, таких как пищевая промышленность, фармацевтика, промышленность, строительство, бытовая химия. Их качество напрямую влияет на безопасное хранение, транспортировку и своевременную доставку продукции на рынок.",
     "quote1_2": "В этой связи деятельность таких крупных мощностей, как Invest Asia в стране, способствует снижению импортных расходов, обеспечению стабильности внутреннего рынка и снижению затрат производителей.",
     "paragraph2": "Еще одним важным аспектом предприятия Invest Asia является то, что это единственное предприятие в Узбекистане, производящее биаксально ориентированную полипропиленовую пленку. Этот тип пленки является одним из наиболее востребованных материалов в упаковочной отрасли и отличается прочностью и легкостью."
+  },
+  "admin": {
+    "panel": "Админ панель",
+    "viewSite": "Посмотреть сайт",
+    "logout": "Выход",
+    "login": {
+      "title": "Вход в админ панель",
+      "subtitle": "Добро пожаловать в систему управления KUN.UZ",
+      "username": "Имя пользователя",
+      "usernamePlaceholder": "Введите имя пользователя",
+      "password": "Пароль",
+      "passwordPlaceholder": "Введите пароль",
+      "submit": "Войти",
+      "error": "Неверное имя пользователя или пароль",
+      "backToHome": "Вернуться на главную"
+    },
+    "menu": {
+      "dashboard": "Панель управления",
+      "categories": "Категории",
+      "posts": "Посты",
+      "locations": "Регионы"
+    },
+    "dashboard": {
+      "welcome": "Добро пожаловать, Админ!",
+      "subtitle": "Показатели системы и общая информация",
+      "totalPosts": "Всего постов",
+      "totalCategories": "Всего категорий",
+      "totalViews": "Всего просмотров",
+      "totalLocations": "Всего регионов",
+      "recentPosts": "Последние посты",
+      "quickActions": "Быстрые действия",
+      "createPost": "Создать новый пост",
+      "createPostDesc": "Добавить новую новость",
+      "manageCategories": "Управление категориями",
+      "manageCategoriesDesc": "Редактировать категории",
+      "manageLocations": "Управление регионами",
+      "manageLocationsDesc": "Редактировать регионы"
+    },
+    "categories": {
+      "title": "Категории",
+      "subtitle": "Управление и редактирование всех категорий",
+      "addNew": "Новая категория",
+      "totalCategories": "Всего категорий",
+      "activeCategories": "Активные категории",
+      "totalPosts": "Всего постов",
+      "categoryName": "Название категории",
+      "slug": "Slug",
+      "posts": "Посты",
+      "status": "Статус",
+      "actions": "Действия",
+      "active": "Активный",
+      "inactive": "Неактивный",
+      "edit": "Редактировать",
+      "delete": "Удалить",
+      "addCategory": "Добавить новую категорию",
+      "editCategory": "Редактировать категорию",
+      "cancel": "Отмена",
+      "create": "Создать",
+      "update": "Обновить",
+      "deleteConfirm": "Вы действительно хотите удалить эту категорию?"
+    },
+    "posts": {
+      "title": "Посты",
+      "subtitle": "Управление и редактирование всех постов",
+      "addNew": "Новый пост",
+      "totalPosts": "Всего постов",
+      "published": "Опубликовано",
+      "drafts": "Черновики",
+      "draft": "Черновик",
+      "totalViews": "Всего просмотров",
+      "postTitle": "Заголовок поста",
+      "category": "Категория",
+      "author": "Автор",
+      "date": "Дата",
+      "views": "Просмотры",
+      "status": "Статус",
+      "actions": "Действия",
+      "edit": "Редактировать",
+      "delete": "Удалить",
+      "addPost": "Добавить новый пост",
+      "editPost": "Редактировать пост",
+      "content": "Контент",
+      "cancel": "Отмена",
+      "create": "Создать",
+      "update": "Обновить",
+      "deleteConfirm": "Вы действительно хотите удалить этот пост?"
+    },
+    "locations": {
+      "title": "Регионы",
+      "subtitle": "Управление и редактирование всех регионов",
+      "addNew": "Новый регион",
+      "totalLocations": "Всего регионов",
+      "activeLocations": "Активные регионы",
+      "totalPosts": "Всего постов",
+      "locationName": "Название региона",
+      "region": "Область",
+      "posts": "Посты",
+      "status": "Статус",
+      "actions": "Действия",
+      "active": "Активный",
+      "inactive": "Неактивный",
+      "edit": "Редактировать",
+      "delete": "Удалить",
+      "addLocation": "Добавить новый регион",
+      "editLocation": "Редактировать регион",
+      "cancel": "Отмена",
+      "create": "Создать",
+      "update": "Обновить",
+      "deleteConfirm": "Вы действительно хотите удалить этот регион?"
+    }
   }
 }
