--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -207,5 +207,115 @@
     "quote1_1": "Qadoqlash mahsulotlari oziq-ovqat, farmatsevtika, sanoat, qurilish, maishiy kimyo kabi ko'plab tarmoqlar uchun zarur xomashyo hisoblanadi. Ularning sifati mahsulotning xavfsiz saqlanishi, transportirovkasi va bozorga o'z vaqtida yetkazilishiga bevosita ta'sir ko'rsatadi.",
     "quote1_2": "Shu jihatdan Invest Asia kabi yirik quvvatlarning mamlakatda faoliyat yuritishi import xarajatlarini kamaytiradi, ichki bozor barqarorligi ta'minlashga va ishlab chiqaruvchilar xarajatlarini qisqartirishga xizmat qiladi.",
     "paragraph2": "Invest Asia korxonasining yana bir muhim jihati shundaki, u O'zbekistonda bioaksal yo'naltirilgan polipropilen plyonka ishlab chiqaradigan yagona korxonadir. Ushbu plyonka turi qadoqlash sohasida eng talabgor materiallardan biri bo'lib, qattiqligi va yengiligi bilan ajralib turadi."
+  },
+  "admin": {
+    "panel": "Admin Panel",
+    "viewSite": "Saytni ko'rish",
+    "logout": "Chiqish",
+    "login": {
+      "title": "Admin Panelga kirish",
+      "subtitle": "KUN.UZ boshqaruv tizimiga xush kelibsiz",
+      "username": "Foydalanuvchi nomi",
+      "usernamePlaceholder": "Foydalanuvchi nomini kiriting",
+      "password": "Parol",
+      "passwordPlaceholder": "Parolingizni kiriting",
+      "submit": "Kirish",
+      "error": "Foydalanuvchi nomi yoki parol noto'g'ri",
+      "backToHome": "Asosiy sahifaga qaytish"
+    },
+    "menu": {
+      "dashboard": "Boshqaruv paneli",
+      "categories": "Kategoriyalar",
+      "posts": "Postlar",
+      "locations": "Hududlar"
+    },
+    "dashboard": {
+      "welcome": "Xush kelibsiz, Admin!",
+      "subtitle": "Tizim ko'rsatkichlari va umumiy ma'lumotlar",
+      "totalPosts": "Jami postlar",
+      "totalCategories": "Jami kategoriyalar",
+      "totalViews": "Jami ko'rishlar",
+      "totalLocations": "Jami hududlar",
+      "recentPosts": "So'ngi postlar",
+      "quickActions": "Tezkor harakatlar",
+      "createPost": "Yangi post yaratish",
+      "createPostDesc": "Yangi yangilik qo'shish",
+      "manageCategories": "Kategoriyalarni boshqarish",
+      "manageCategoriesDesc": "Kategoriyalarni tahrirlash",
+      "manageLocations": "Hududlarni boshqarish",
+      "manageLocationsDesc": "Hududlarni tahrirlash"
+    },
+    "categories": {
+      "title": "Kategoriyalar",
+      "subtitle": "Barcha kategoriyalarni boshqarish va tahrirlash",
+      "addNew": "Yangi kategoriya",
+      "totalCategories": "Jami kategoriyalar",
+      "activeCategories": "Faol kategoriyalar",
+      "totalPosts": "Jami postlar",
+      "categoryName": "Kategoriya nomi",
+      "slug": "Slug",
+      "posts": "Postlar",
+      "status": "Holat",
+      "actions": "Harakatlar",
+      "active": "Faol",
+      "inactive": "Nofaol",
+      "edit": "Tahrirlash",
+      "delete": "O'chirish",
+      "addCategory": "Yangi kategoriya qo'shish",
+      "editCategory": "Kategoriyani tahrirlash",
+      "cancel": "Bekor qilish",
+      "create": "Yaratish",
+      "update": "Yangilash",
+      "deleteConfirm": "Rostdan ham bu kategoriyani o'chirmoqchimisiz?"
+    },
+    "posts": {
+      "title": "Postlar",
+      "subtitle": "Barcha postlarni boshqarish va tahrirlash",
+      "addNew": "Yangi post",
+      "totalPosts": "Jami postlar",
+      "published": "Nashr etilgan",
+      "drafts": "Qoralamalar",
+      "draft": "Qoralama",
+      "totalViews": "Jami ko'rishlar",
+      "postTitle": "Post sarlavhasi",
+      "category": "Kategoriya",
+      "author": "Muallif",
+      "date": "Sana",
+      "views": "Ko'rishlar",
+      "status": "Holat",
+      "actions": "Harakatlar",
+      "edit": "Tahrirlash",
+      "delete": "O'chirish",
+      "addPost": "Yangi post qo'shish",
+      "editPost": "Postni tahrirlash",
+      "content": "Kontent",
+      "cancel": "Bekor qilish",
+      "create": "Yaratish",
+      "update": "Yangilash",
+      "deleteConfirm": "Rostdan ham bu postni o'chirmoqchimisiz?"
+    },
+    "locations": {
+      "title": "Hududlar",
+      "subtitle": "Barcha hududlarni boshqarish va tahrirlash",
+      "addNew": "Yangi hudud",
+      "totalLocations": "Jami hududlar",
+      "activeLocations": "Faol hududlar",
+      "totalPosts": "Jami postlar",
+      "locationName": "Hudud nomi",
+      "region": "Viloyat",
+      "posts": "Postlar",
+      "status": "Holat",
+      "actions": "Harakatlar",
+      "active": "Faol",
+      "inactive": "Nofaol",
+      "edit": "Tahrirlash",
+      "delete": "O'chirish",
+      "addLocation": "Yangi hudud qo'shish",
+      "editLocation": "Hududni tahrirlash",
+      "cancel": "Bekor qilish",
+      "create": "Yaratish",
+      "update": "Yangilash",
+      "deleteConfirm": "Rostdan ham bu hududni o'chirmoqchimisiz?"
+    }
   }
 }
